src/objects/WES_Fuel_Card__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Embossed_Line__c</fullName>
        <formula>WESFuelCardPack__r.Additional_Embossed_Line__c</formula>
        <label>Additional Embossed Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplVelocityProfile__c</fullName>
        <formula>WES_Application_Request__r.VelocityProfileName__c</formula>
        <label>App Velocity Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CardHolderType__c</fullName>
        <label>Card Holder Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Driver</fullName>
                </value>
                <value>
                    <fullName>Vehicle</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Esso</fullName>
                </value>
                <value>
                    <fullName>UK Fuels</fullName>
                </value>
                <value>
                    <fullName>EDC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fuel_Card_Complete_Formula__c</fullName>
        <formula>IF(
AND(
TEXT(Card_Type__c) = &quot;EDC&quot; ||
TEXT(Card_Type__c) = &quot;UK Fuels&quot;,
NOT(ISBLANK(TEXT(POS_Prompt__c))),
NOT(ISBLANK(TEXT(Purchase_Option_Fuel__c ))), 
NOT(ISBLANK(TEXT(Velocity_Control_Profiler__c))) 
)
,TRUE,
IF(
AND(		
TEXT(Card_Type__c) = &quot;Esso&quot;,
NOT(ISBLANK(TEXT(POS_Prompt__c))),
NOT(ISBLANK(TEXT(Purchase_Option_Fuel__c ))), 
NOT(ISBLANK(TEXT(Velocity_Control_Profiler__c))), 
NOT(ISBLANK(TEXT(Toll_Usage__c))),
NOT(ISBLANK(TEXT(Purchase_Option_Services__c))),
NOT(ISBLANK(TEXT(Purchase_Option_Fuel__c))),
NOT(ISBLANK(TEXT( Purchase_Option_Products__c))),
NOT(ISBLANK(TEXT(PIN_Type__c))),
NOT(ISBLANK(TEXT(PIN_Creation_Method__c))),
NOT(ISBLANK(TEXT(National_International__c))),
NOT(ISBLANK(TEXT(Truck_Fleet__c))),
NOT(ISBLANK(TEXT(Other_Networks__c)))
)
,TRUE,FALSE))</formula>
        <label>Fuel Card Has Complete Information?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fuel_Card_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fuel Card Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Sort_Label__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Sort Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameOnCard__c</fullName>
        <description>Based on Name Appearing on card on related WES Application</description>
        <formula>WES_Application_Request__r.NameOnCard__c</formula>
        <label>Name appearing on Card</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_International__c</fullName>
        <label>Is International?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Networks__c</fullName>
        <label>Other Networks</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PIN_Creation_Method__c</fullName>
        <label>PIN Creation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>System generated</fullName>
                </value>
                <value>
                    <fullName>User defined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PIN_Type__c</fullName>
        <label>PIN Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Card</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Fleet</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PIN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Must be a 4 digit Number, Non-consecutive (Ex:1111), Not-Ascending (Ex:1234), Not-descending (4321).</inlineHelpText>
        <label>PIN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POS_Prompt__c</fullName>
        <label>POS Prompt</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>200</fullName>
                    <label>None</label>
                </value>
                <value>
                    <fullName>220</fullName>
                    <label>ID input</label>
                </value>
                <value>
                    <fullName>250</fullName>
                    <label>Odometer input</label>
                </value>
                <value>
                    <fullName>230</fullName>
                    <label>Odometer and ID input</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Option_Fuel__c</fullName>
        <label>Purchase Option Fuel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>0 - All Fuels</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>1 - Diesel</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - Unleaded</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 - Unleaded &amp; LPG</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>8 - LPG</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Option_Products__c</fullName>
        <label>Purchase Option Products</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>0 - None</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>1 - Lubes</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - Lubes + Services</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 - Lubes + Services + TBA</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 - Lubes + Services + TBA + ShopArticles</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Option_Services__c</fullName>
        <label>Purchase Option Services</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Toll_Usage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0</fullName>
                    <label>0 - None</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>1 - Special</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - Tolls + Ferries</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 - Tolls + Ferries + Special</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 - Carwash</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5 - Carwash + Special</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>6 - Carwash + Tolls + Ferries</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>7 - Carwash + Tolls + Ferries + Special</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimeLimitCode__c</fullName>
        <formula>IF(NOT(ISBLANK(velocityControlProfile__c)), 
CASE(velocityControlProfile__c, 
&quot;F01L&quot;,&quot;02&quot;, 
&quot;F02L&quot;,&quot;02&quot;,	
&quot;01&quot;),NULL)</formula>
        <label>TimeLimitCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toll_Usage__c</fullName>
        <label>Toll Usage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Truck_Fleet__c</fullName>
        <label>Is Fleet?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <label>Truck</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Fleet</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VRN_Driver__c</fullName>
        <formula>WESFuelCardPack__r.VRN_Driver__c</formula>
        <label>VRN / Driver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VelocityProfileDifferent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Velocity Profile selected on card is different then the Default Velocity Profile or override in the application.</inlineHelpText>
        <label>Velocity Profile Different?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Velocity_Control_Profiler__c</fullName>
        <label>Velocity Control Profiler</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fleet 1</fullName>
                </value>
                <value>
                    <fullName>Fleet 1 + day limitations</fullName>
                </value>
                <value>
                    <fullName>Fleet 2</fullName>
                </value>
                <value>
                    <fullName>Fleet 2 + day limitations</fullName>
                </value>
                <value>
                    <fullName>Fleet 3</fullName>
                </value>
                <value>
                    <fullName>Fleet 3 + Higher Vel. Freq.</fullName>
                </value>
                <value>
                    <fullName>Fleet 4</fullName>
                </value>
                <value>
                    <fullName>Small truck 1</fullName>
                </value>
                <value>
                    <fullName>Truck 1</fullName>
                </value>
                <value>
                    <fullName>Truck 2</fullName>
                </value>
                <value>
                    <fullName>Truck 2 + Higher Vel. Freq.</fullName>
                </value>
                <value>
                    <fullName>Truck 3 + Higher Vel. Freq.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WESFuelCardPack__c</fullName>
        <label>WES Fuel Card Pack</label>
        <referenceTo>WES_Fuel_Card_Pack__c</referenceTo>
        <relationshipLabel>WES Fuel Cards</relationshipLabel>
        <relationshipName>WES_Fuel_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>WES_Application_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WES Application Request</label>
        <referenceTo>WES_Application_Request__c</referenceTo>
        <relationshipLabel>WES Fuel Cards</relationshipLabel>
        <relationshipName>WES_Fuel_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>velocityControlProfile__c</fullName>
        <description>Used to send the Velocity Profile IFCS ID</description>
        <formula>CASE( Velocity_Control_Profiler__c,
&quot;Fleet 1&quot;, &quot;VP01-02&quot;,
&quot;Fleet 1 + day limitations&quot;, &quot;VP01-02&quot;,
&quot;Fleet 2&quot;, &quot;VP03-04&quot;,
&quot;Fleet 2 + day limitations&quot;, &quot;VP03-04&quot;,
&quot;Fleet 3&quot;, &quot;VP05&quot;,
&quot;Fleet 3 + Higher Vel. Freq.&quot;, &quot;VP06&quot;,
&quot;Fleet 4&quot;,&quot;VP07&quot;,
&quot;Small truck 1&quot;, &quot;VP08&quot;,
&quot;Truck 1&quot;, &quot;VP09&quot;,
&quot;Truck 2&quot;,&quot;VP10&quot;,
&quot;Truck 2 + Higher Vel. Freq.&quot;, &quot;VP11&quot;,
&quot;Truck 3 + Higher Vel. Freq.&quot;, &quot;VP12&quot;,
NULL)</formula>
        <label>velocityControlProfile IFCS Code</label>
        <type>Text</type>
    </fields>
    <label>WES Fuel Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WES-FC-{0000}</displayFormat>
        <label>WES Fuel Card #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WES Fuel Cards</pluralLabel>
    <recordTypes>
        <fullName>EDC</fullName>
        <active>true</active>
        <label>EDC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Esso</fullName>
        <active>true</active>
        <label>Esso</label>
    </recordTypes>
    <recordTypes>
        <fullName>UK_Fuels</fullName>
        <active>true</active>
        <label>UK Fuels</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PIN_Validation_4_Digit_Number</fullName>
        <active>true</active>
        <description>A PIN Number must be a 4 digit Number</description>
        <errorConditionFormula>NOT(ISBLANK(PIN__c)) &amp;&amp;
(LEN(PIN__c) &lt;&gt; 4 ||
NOT(ISNUMBER(PIN__c)))</errorConditionFormula>
        <errorDisplayField>PIN__c</errorDisplayField>
        <errorMessage>PIN Must be a 4 Digit Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PIN_Validation_Ascending_Numbers</fullName>
        <active>true</active>
        <description>A PIN Number can&apos;t have 4 Numbers Ascending. Ex: 1234</description>
        <errorConditionFormula>AND(
ISNUMBER(PIN__c),
VALUE(MID(PIN__c, 1,1)) +1 = VALUE(MID(PIN__c, 2,1)),
VALUE(MID(PIN__c, 2,1)) +1 = VALUE(MID(PIN__c, 3,1)),
VALUE(MID(PIN__c, 3,1)) +1 = VALUE(MID(PIN__c, 4,1))
)</errorConditionFormula>
        <errorDisplayField>PIN__c</errorDisplayField>
        <errorMessage>PIN Can NOT be 4 numbers in Ascending order (Ex: 1234)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PIN_Validation_Consecutive_Numbers</fullName>
        <active>true</active>
        <description>A PIN Number can&apos;t have 4 consecutive Numbers</description>
        <errorConditionFormula>AND(
ISNUMBER(PIN__c), 
MID(PIN__c, 1,1) = MID(PIN__c, 2,1),
MID(PIN__c, 1,1) = MID(PIN__c, 3,1),
MID(PIN__c, 1,1) = MID(PIN__c, 4,1)
)</errorConditionFormula>
        <errorDisplayField>PIN__c</errorDisplayField>
        <errorMessage>PIN Can NOT be 4 consecutive numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PIN_Validation_Descending_Numbers</fullName>
        <active>true</active>
        <description>A PIN Number can&apos;t have 4 Numbers Descending. Ex: 4321</description>
        <errorConditionFormula>AND(
ISNUMBER(PIN__c),
VALUE(MID(PIN__c, 1,1)) -1 = VALUE(MID(PIN__c, 2,1)),
VALUE(MID(PIN__c, 2,1)) -1 = VALUE(MID(PIN__c, 3,1)),
VALUE(MID(PIN__c, 3,1)) -1 = VALUE(MID(PIN__c, 4,1))
)</errorConditionFormula>
        <errorDisplayField>PIN__c</errorDisplayField>
        <errorMessage>PIN Can NOT be 4 numbers in Descending order (Ex: 4321)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Saving_PIN_if_System_Generated</fullName>
        <active>true</active>
        <description>User can not enter and save a PIN number if they select System Generated as PIN Creation Type</description>
        <errorConditionFormula>AND(
TEXT(PIN_Creation_Method__c) = &quot;System generated&quot;,
	NOT(ISBLANK(PIN__c))
)</errorConditionFormula>
        <errorDisplayField>PIN__c</errorDisplayField>
        <errorMessage>You can not enter a PIN if you select &quot;System Generated&quot; as PIN Creation Method</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WES_Enter_PIN_if_Fleet_User_Defined</fullName>
        <active>true</active>
        <description>Must enter a PIN if Fleet PIN and User defined</description>
        <errorConditionFormula>AND(
TEXT(PIN_Type__c) = &quot;Fleet PIN&quot;,
TEXT(PIN_Creation_Method__c) = &quot;User defined&quot;,
ISBLANK(PIN__c)
)</errorConditionFormula>
        <errorDisplayField>PIN__c</errorDisplayField>
        <errorMessage>You must enter a PIN if Fleet PIN and User defined are selected</errorMessage>
    </validationRules>
</CustomObject>